--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </div>
 
                 <div class="navbar-brand pl-4" id="logo">
-                    <img class="nav-item" src="runza-logo.png" width="60" height="60">
+                    <img class="nav-item" src="png/runza-logo.png" width="60" height="60">
                 </div>
             </div>
         </nav>
