--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             </tr>
 
                             <tr>
-                                <td>Kianu Reeves</td>
+                                <td>Keanu Reeves</td>
                                 <td>09/02/1964</td>
                                 <td>777 N Breathtaking Pkwy</td>
                                 <td>$27,000,000</td>
