--- a/name.html
+++ b/name.html
@@ -39,7 +39,7 @@
 
                     <li>Jamie August</li>
 
-                    <li>Kianu Reeves</li>
+                    <li>Keanu Reeves</li>
 
                     <li>Gus Buckets</li>
 
