--- a/index.html
+++ b/index.html
@@ -24,110 +24,123 @@
 
         <section id="index-content-section">
             <div class="container d-flex pt-5" id="index-content-container">
-                    <section class="w-25" id="left-panel">
-                        <a href="name.html">Name</a>
-                        <br>
-                        <a href="dob.html">Date of Birth</a>
-                        <br>
-                        <a href="address.html">Address</a>
-                    </section>
+                <section class="w-25" id="left-panel">
+                    <a href="name.html">Name</a>
+                    <br>
+                    <a href="dob.html">Date of Birth</a>
+                    <br>
+                    <a href="address.html">Address</a>
+                </section>
 
-                    <section class="w-75" id="right-panel">
-                        <table class="table table-sm">
-                            <tr>
-                                <th>Name</th>
-                                <th>Date of Birth</th>
-                                <th>Address</th>
-                                <th>Money in Checking</th>
-                                <th>Money in Savings</th>
-                            </tr>
+                <section class="w-75" id="right-panel">
+                    <table class="table table-sm">
+                        <tr>
+                            <th>Name</th>
+                            <th>Date of Birth</th>
+                            <th>Address</th>
+                            <th>Money in Checking</th>
+                            <th>Money in Savings</th>
+                        </tr>
 
-                            <tr>
-                                <td>Daniel Davis</td>
-                                <td>03/23/1982</td>
-                                <td>7751 N Berry Ave</td>
-                                <td>$1,172.65</td>
-                                <td>$2,844.54</td>
-                            </tr>
+                        <tr>
+                            <td>Daniel Davis</td>
+                            <td>03/23/1982</td>
+                            <td>7751 N Berry Ave</td>
+                            <td>$1,172.65</td>
+                            <td>$2,844.54</td>
+                        </tr>
 
-                            <tr>
-                                <td>Glen Wood</td>
-                                <td>07/21/1974</td>
-                                <td>9984 S Glenwood Ln</td>
-                                <td>$5,376.22</td>
-                                <td>$2,834.94</td>
-                            </tr>
+                        <tr>
+                            <td>Glen Wood</td>
+                            <td>07/21/1974</td>
+                            <td>9984 S Glenwood Ln</td>
+                            <td>$5,376.22</td>
+                            <td>$2,834.94</td>
+                        </tr>
 
-                            <tr>
-                                <td>Ross Nielsen</td>
-                                <td>05/06/1985</td>
-                                <td>1221 W Rossnielsen Rd</td>
-                                <td>$1,804.65</td>
-                                <td>$51,467.34</td>
-                            </tr>
+                        <tr>
+                            <td>Ross Nielsen</td>
+                            <td>05/06/1985</td>
+                            <td>1221 W Rossnielsen Rd</td>
+                            <td>$1,804.65</td>
+                            <td>$51,467.34</td>
+                        </tr>
 
-                            <tr>
-                                <td>John Ratzenberger</td>
-                                <td>03/06/1947</td>
-                                <td>8720 Sunnyside Blvd</td>
-                                <td>$9,764.48</td>
-                                <td>$18,733.54</td>
-                            </tr>
+                        <tr>
+                            <td>John Ratzenberger</td>
+                            <td>03/06/1947</td>
+                            <td>8720 Sunnyside Blvd</td>
+                            <td>$9,764.48</td>
+                            <td>$18,733.54</td>
+                        </tr>
 
-                            <tr>
-                                <td>John Travolta</td>
-                                <td>02/18/1954</td>
-                                <td>1111 What Ln</td>
-                                <td>$100.00</td>
-                                <td>$22,5433.67</td>
-                            </tr>
+                        <tr>
+                            <td>John Travolta</td>
+                            <td>02/18/1954</td>
+                            <td>1111 What Ln</td>
+                            <td>$100.00</td>
+                            <td>$22,543.67</td>
+                        </tr>
 
-                            <tr>
-                                <td>Marc With a C</td>
-                                <td>09/24/1989</td>
-                                <td>7823 N 13th Ave</td>
-                                <td>$5,732.42</td>
-                                <td>$7,988.29</td>
-                            </tr>
+                        <tr>
+                            <td>Marc With a C</td>
+                            <td>09/24/1989</td>
+                            <td>7823 N 13th Ave</td>
+                            <td>$5,732.42</td>
+                            <td>$7,988.29</td>
+                        </tr>
 
-                            <tr>
-                                <td>Jamie August</td>
-                                <td>08/06/1997</td>
-                                <td>6201 W Olive Ave</td>
-                                <td>$1,165.38</td>
-                                <td>$965.56</td>
-                            </tr>
+                        <tr>
+                            <td>Jamie August</td>
+                            <td>08/06/1997</td>
+                            <td>6201 W Olive Ave</td>
+                            <td>$1,165.38</td>
+                            <td>$965.56</td>
+                        </tr>
 
-                            <tr>
-                                <td>Keanu Reeves</td>
-                                <td>09/02/1964</td>
-                                <td>777 N Breathtaking Pkwy</td>
-                                <td>$27,000,000</td>
-                                <td>$12,081,325.18</td>
-                            </tr>
+                        <tr>
+                            <td>Keanu Reeves</td>
+                            <td>09/02/1964</td>
+                            <td>777 N Breathtaking Pkwy</td>
+                            <td>$27,000,000</td>
+                            <td>$12,081,325.18</td>
+                        </tr>
 
-                            <tr>
-                                <td>Gus Buckets</td>
-                                <td>06/20/1995</td>
-                                <td>4545 N Johnson Rd</td>
-                                <td>$9,734.03</td>
-                                <td>$12,583.12</td>
-                            </tr>
+                        <tr>
+                            <td>Gus Buckets</td>
+                            <td>06/20/1995</td>
+                            <td>4545 N Johnson Rd</td>
+                            <td>$9,734.03</td>
+                            <td>$12,583.12</td>
+                        </tr>
 
-                            <tr>
-                                <td>Kevin Seacucumber</td>
-                                <td>03/07/2001</td>
-                                <td>231 W Olive Ave</td>
-                                <td>$27.50</td>
-                                <td>$75.21</td>
-                            </tr>
-                        </table>
-                    </section>
+                        <tr>
+                            <td>Kevin Seacucumber</td>
+                            <td>03/07/2001</td>
+                            <td>231 W Olive Ave</td>
+                            <td>$27.50</td>
+                            <td>$75.21</td>
+                        </tr>
+                    </table>
+                </section>
             </div>
         </section>
 
-        <section id="extras-section">
+        <section class="pt-5" id="extras-section">
+            <div class="container">
 
+                <hr>
+
+                <div id="extras-form" class="w-25">
+                    <h3>Add Employee</h3>
+                    <form>
+                        <input placeholder="Name" class="form-control" type="text"><br>
+                        <input placeholder="Date of Birth" class="form-control" type="text"><br>
+                        <input placeholder="Address" class="form-control" type="text"><br>
+                        <button class="btn btn-primary">Add</button>
+                    </form>
+                </div>
+            </div>
         </section>
     
         <footer class="bottom-0 absolute bg-light" style="position: absolute; bottom: 0; width: 100%;" id="footer">
